# random_name

./: .gitignore  ARCHITECTURE.md  BUILD_GUIDE.md  CMakeLists.txt  CMakeLists_test_simple.txt  CMakePresets.json  CMakeSettings.json  CODE_STYLE_GUIDE.md  DEVELOPER_QUICKSTART.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  FEATURES.md  LogFile.cpp  LogFile.h  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  Resource.rc  app.rc.in  areo.h  bitmaps.h  config.h  config.txt  config2.cpp  config2.h  directshow.h  genthen-impact.h  getname.h  history.txt  install_virtual_keyboard.sh  log.h  main.lnk  mywindows.h  name.txt  names.txt  pictures.h  prepare.bat  ramdon name.cpp  ramdon name.sln  (+16 more)
.github/workflows/: Cmake.yml  msbuild.xml  msbuild.yml
TestProj/: Bitmap.cpp  Bitmap.h  Canvas.cpp  Canvas.h  EasyGL.cpp  EasyGL.h  Gp.cpp  Gp.h  My_Font.cpp  My_Font.h  OpenGLBase.cpp  OpenGLBase.h  Resource.h  Shader.cpp  Shader.h  TestProj.cpp  TestProj.rc  TestProj.vcxproj  TestProj.vcxproj.filters  TextRenderer.cpp  TextRenderer.h  VertexBuffer.cpp  VertexBuffer.h  debug.cap  sth2sth.cpp  sth2sth.h
TestProj/Shader/: text.fs  text.vs
docs/: additional_editable_buttons_solution.md  aspect_ratio_snap_feature.md  region_config_usage.md  testing.md  ui_edit_mode_integration.md  utf8_crash_fix.md  video_completion_improvement.md  virtual_keyboard_crossplatform.md
examples/: additional_editable_buttons_guide.cpp  edit_mode_example.cpp  edit_overlay_display_test.cpp  language_formatting_example.cpp  layout_persistence_test.cpp  mainscreen_overlay_edit_integration.cpp  region_1to1_test.cpp  region_config_example.cpp  square_button_demo.cpp  test_completion_logic.cpp  utf8_text_handling_demo.cpp  video_completion_example.cpp
files/: config.json  config.json.bak  config.txt  setting.json  settings.json  version.json
files/icos/: bmptoico.py  bmp转ico.py  icotobmp.py
files/imgs/: webp to bmp.py
files/localization/: en-US.json  ja-JP.json  zh-CN.json  zh-TW.json
files/names/: 1.txt  2.txt  3.txt  4.txt
files/video/: 4star-single.webm  5star-single.webm  bg.webm  group-4star.webm  group-5star.webm  signal-3star.webm
include/: app.h  mainloop.h  version.h.in
include/core/: AudioDefs.h  Config.h  Drawer.h  ErrorRecovery.h  OpenGLErrorRecovery.h  configItem.h  explorer.h  log.h  nameRandomer.h
include/core/baseItem/: Audio.h  Base.h  Bitmap.h  Button.h  Font.h  VideoPlayer.h  lang.h
include/core/baseItem/Video/: HWAccelMonitor.h  VideoPlayer.h
include/core/decrash/: ErrorRecovery.h  MemoryMonitor.h  VideoPlayerErrorRecovery.h
include/core/render/: Font.h  Framebuffer.h  GLBase.h  GpAdapter.h  IFontRenderer.h  IndexBuffer.h  OpenGLRenderer.h  RenderAPI.h  Renderer.h  Shader.h  TextRenderer.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/core/screen/: ListNameScreen.h  SettingScreen.h  VideoScreen.h  base.h  mainScreen.h  nameScreen.h
installer/: ARM64.iss  main.iss  x64.iss  x86-64.iss  x86.iss
installer_action/: ARM64.iss  common.iss  x64.iss  x86.iss
pythons/: 2 (2).py  2.py  a.pyw  test - 副本.py  test.py  test.spec
random/: Audio.cpp  Audio.h  Button.cpp  Button.h  ClassDiagram.cd  ConfigItem.cpp  ConfigItem.h  FirstScreen.cpp  FirstScreen.h  FontManager.cpp  FontManager.h  Gp.cpp  Gp.h  GpManager.h  HistoryScreen.cpp  HistoryScreen.h  LoadWindow.cpp  LoadWindow.h  MSGback.cpp  MSGback.h  MenuItem.cpp  MenuItem.h  MenuScreen.cpp  MenuScreen.h  NameButton.cpp  NameButton.h  NameScreen.cpp  NameScreen.h  Others.cpp  Painter.h  Resource.h  Screen.cpp  Screen.h  SetButton.cpp  SetButton.h  SetPageRollBack.cpp  Timer.cpp  Timer.h  VideoPlayer.cpp  VideoPlayer.h  (+45 more)
random/EasyGL/: Bitmap.cpp  Bitmap.h  EasyGL.cpp  EasyGL.h  My_Font.cpp  OpenGLBase.h  Shader.cpp  Shader.h  VertexBuffer.h
random/opengl/: Application.cpp  Application.cpp.bak  Application.h  FontRenderer.cpp  FontRenderer.h  GLRenderer.cpp  GLRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
random/opengl/audio/: AudioManager.cpp  AudioManager.h
res/shaders/: Basic.frag  Basic.vert
src/: app.cpp  main.cpp  mainloop.cpp
src/core/: Audio.cpp  Config.cpp  ConfigItem.cpp  Drawer.cpp  ErrorRecovery.cpp  MemoryMonitor.cpp  OpenGLErrorRecovery.cpp  VideoPlayerErrorRecovery.cpp  explorer.cpp  explorerInit.cpp  log.cpp  nameRandomer.cpp
src/core/baseItem/: Audio.cpp  Base.cpp  Bitmap.cpp  Button.cpp  Config.cpp  ConfigItem.cpp  Font.cpp  FontBitmapRender.cpp  SettingButtton.cpp  VideoPlayer.cpp  lang.cpp  nameRandomer.cpp
src/core/baseItem/Video/: HWAccelMonitor.cpp  VideoPlayer.cpp
src/core/decrash/: ErrorRecovery.cpp  MemoryMonitor.cpp  OpenGLErrorRecovery.cpp  VideoPlayerErrorRecovery.cpp
src/core/render/: Drawer.cpp  Font.cpp  Framebuffer.cpp  GLBase.cpp  GpAdapter.cpp  IndexBuffer.cpp  OpenGLFontRenderer.cpp  OpenGLFontRenderer.h  OpenGLRenderer.cpp  RenderAPI.cpp  Renderer.cpp  Shader.cpp  TextRenderer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
src/core/screen/: ListNameScreen.cpp  NameScreen.cpp  VideoScreen.cpp  base.cpp  mainScreen.cpp
src/core/screen/SettingScreen/: LoadButton.cpp  SettingButtton.cpp  SettingScreen.cpp
src/examples/: audio_example.cpp
temp/: basic_frag.glsl  basic_vert.glsl  image_frag.glsl  image_vert.glsl
tools/: generate_texture.cpp
upgrade/: Log.cpp  Log.h  isdebug.h  json_reader.cpp  json_value.cpp  json_writer.cpp  local.cpp  local.h  log.cpp  log.h  resource.h  task.cpp  task.h  unzip.cpp  unzip.h  upgrade.cpp  upgrade.rc  upgrade.vcxproj  upgrade.vcxproj.filters  value.h  web.cpp  web.h  writer.h
